--- a/CSS/aboutHeader.css
+++ b/CSS/aboutHeader.css
@@ -53,7 +53,7 @@
     line-height: 28px; 
     width: 730px;
     
-    margin: 0 165p 120px 0;
+    margin: 0 0 120px 0;
 }
 
 /* -------------------
